duplicate code removed from CSS to correct layout issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-/* formats position of three large content boxes */
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
+
 /* formats position of three smaller content boxes */
 .benefits {
     margin-right: 20px;
